--- a/project-management/application-modelling/class-diagrams/High Level.html
+++ b/project-management/application-modelling/class-diagrams/High Level.html
@@ -1,4 +1,5 @@
 <map name="GraffleExport">
+	<area shape=rect coords="102,534,222,592" href="Game%20Flow.html">
 	<area shape=rect coords="345,228,465,290" href="Game%20Engine.html">
 	<area shape=rect coords="115,228,235,290" href="Interface.html">
 	<area shape=rect coords="254,51,374,77" href="High%20Level.html">
