--- a/project-management/application-modelling/architecture-diagrams/Android Components.html
+++ b/project-management/application-modelling/architecture-diagrams/Android Components.html
@@ -1,4 +1,4 @@
 <map name="GraffleExport">
-	<area shape=rect coords="254,614,395,671" href="Android%20Server%20Interface.html">
+	<area shape=rect coords="71,105,191,163" href="CD%3A%20User%20Interface%20Component.html">
 </map>
 <img border=0 src="Android%20Components.png" usemap="#GraffleExport">
