--- a/project-management/application-modelling/architecture-diagrams/CD: User Interface Component.html
+++ b/project-management/application-modelling/architecture-diagrams/CD: User Interface Component.html
@@ -1,3 +1,5 @@
 <map name="GraffleExport">
+	<area shape=rect coords="471,315,706,353" href="CD%3A%20Game%20Board%20Engine.html">
+	<area shape=rect coords="475,409,710,447" href="CD%3A%20Game%20Board%20Engine.html">
 </map>
 <img border=0 src="CD%3A%20User%20Interface%20Component.png" usemap="#GraffleExport">
